# promptgate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.ja.md  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: embedding-tests.yml  eval.yml  publish.yml
data/: dataset_v1.csv  dataset_v2.csv
data/hard/: classifier_hard_v2.csv
data/holdout/: classifier_holdout_v1.csv
data/raw/existing/: existing.csv
data/raw/translated/: translated_ja.csv
docs/: classifier-benchmark-report-qiita.md  detector-benchmark-report.md  getting-started.ja.md  getting-started.md  logging.ja.md  logging.md
eval/: corpus.jsonl  run_eval.py
eval/results/: rule_based.md
models/promptgate-classifier-v1/: config.json  eval_report.json
promptgate/: __init__.py  core.py  normalizer.py  result.py
promptgate/detectors/: __init__.py  base.py  embedding.py  llm_judge.py  rule_based.py
promptgate/patterns/: en.yaml  en_output.yaml  ja.yaml  ja_output.yaml
promptgate/providers/: __init__.py  anthropic_bedrock.py  base.py
scripts/: benchmark_200.py  benchmark_200_other_models.py  benchmark_embedding_comparison.py  benchmark_models.py  build_classifier_hard_data_v2.py  build_classifier_holdout_v1.py  eval_classifier.py  eval_holdout.py  train_classifier.py
src/promptgate/: __init__.py  core.py  exceptions.py  result.py
src/promptgate/detectors/: __init__.py  classifier.py  embedding.py  llm_judge.py  rule_based.py
src/promptgate/patterns/: en.yaml  ja.yaml
src/promptgate/providers/: __init__.py  anthropic.py  anthropic_bedrock.py  anthropic_vertex.py  base.py  openai.py
tests/: test_async.py  test_classifier.py  test_core.py  test_embedding.py  test_evasion.py  test_llm_judge.py  test_normalizer.py  test_output_rules.py  test_patterns.py  test_providers.py  test_rule_based.py
