[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptgate"
version = "0.4.1"
description = "LLMアプリケーション向けプロンプトインジェクション検出ライブラリ"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "YUICHI KANEKO" }]
requires-python = ">=3.8"
dependencies = ["pyyaml"]

[project.optional-dependencies]
embedding = ["sentence-transformers"]
classifier = ["transformers", "torch", "safetensors"]
train = ["datasets", "pandas", "scikit-learn", "transformers", "torch", "safetensors"]
llm = ["anthropic"]
llm-openai = ["openai"]
dev = ["pytest", "pytest-cov", "pytest-asyncio", "mypy", "ruff"]
all = [
    "sentence-transformers",
    "datasets",
    "pandas",
    "scikit-learn",
    "transformers",
    "torch",
    "safetensors",
    "anthropic",
    "openai",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
promptgate = ["patterns/*.yaml"]

[tool.mypy]
python_version = "3.8"
strict = true

[[tool.mypy.overrides]]
module = [
    "anthropic",
    "openai",
    "sentence_transformers",
    "torch",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py38"
